# petpet-rs

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  pyproject.toml
data/gluing/: data.json
data1/: data.json
java/petpet-rs-jni/: README.md  build.gradle  settings.gradle
java/petpet-rs-jni/src/main/java/moe/d2n/petpetrs/: PetpetJNILoader.java  PetpetRsBuilder.java  PetpetRsService.java
java/petpet-rs-jni/src/test/java/: BaseTest.java
python/petpet_rs/: __init__.py  example.py
src/: lib.rs  main.rs
src/core/: errors.rs  mod.rs
src/core/builder/: avatar_builder.rs  background_builder.rs  mod.rs  petpet_builder.rs  pos_builder.rs  text_builder.rs
src/core/encoder/: encoder.rs
src/core/filters/: binarize.glsl  binarize.rs  bulge.glsl  bulge.rs  color_halftone.glsl  color_halftone.rs  contrast.glsl  contrast.rs  denoise.glsl  denoise.rs  dot_screen.glsl  dot_screen.rs  filters.rs  gray.glsl  gray.rs  hsb.glsl  hsb.rs  mod.rs  noise.glsl  noise.rs  oil.glsl  oil.rs  pinch.glsl  pinch.rs  swim.glsl  swim.rs  swirl.glsl  swirl.rs
src/core/http/: avatar_data_factory.rs  mod.rs  requester.rs  template_data.rs
src/core/loader/: color_util.rs  image_loader.rs  mod.rs
src/core/model/: avatar_model.rs  mod.rs  text_model.rs
src/core/template/: avatar_template.rs  background_template.rs  filter_template.rs  mod.rs  petpet_template.rs  text_template.rs
src/interface/: ffi.rs  java_jni.rs  mod.rs  python.rs
src/server/: config.rs  mod.rs  query_template.rs  server.rs
src/server/service/: mod.rs  petpet_service.rs  service_data.rs
