[package]
name = "petpet-rs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["skia-safe/gl", "skia-safe/gpu"]

[dependencies]
skia-safe = { version = "0.68.0", features = ["gl", "gpu", "textlayout"] }
reqwest = { version = "0.11.22", features = [] }
url = "2.4.1"
futures = "0.3"
serde_json = "1.0.108"
serde = { version = "1.0.190", features = ["derive"] }
once_cell = "1.18.0"
tokio = { version = "1.33.0", features = ["full"] }
rand = "0.8.5"
meval = "0.2.0"
schnellru = "0.2.1"
gif = { version = "0.12.0" }
axum = "0.6"
tracing-subscriber = "0.3.18"
rayon = "1.8.0"
paste = "1.0.14"
serde_path_to_error = "0.1.14"
color-art = "0.3.7"
regex = "1.10.2"
