[package]
name = "petpet-rs"
version = "0.0.1"
edition = "2021"

[lib]
name = "petpet"
crate-type = ["cdylib"]

[features]
default = ["skia-safe/gl", "skia-safe/gpu", "server"]
server = ["axum"]
python = ["pyo3", "pythonize", "pyo3-asyncio"]
java = ["jni"]

[dependencies]
skia-safe = { version = "0.68.0", features = ["gl", "gpu", "textlayout"] }
reqwest = { version = "0.11.22", features = [] }
url = "2.4.1"
futures = "0.3"
serde_json = "1.0.108"
serde = { version = "1.0.190", features = ["derive"] }
once_cell = "1.18.0"
tokio = { version = "1.33.0", features = ["full"] }
rand = "0.8.5"
meval = "0.2.0"
schnellru = "0.2.1"
gif = { version = "0.12.0" }
axum = { version = "0.6", optional = true }
tracing-subscriber = "0.3.18"
rayon = "1.8.0"
paste = "1.0.14"
serde_path_to_error = "0.1.14"
color-art = "0.3.7"
regex = "1.10.2"

pyo3 = { version = "0.20.0", optional = true, features = ["extension-module"] }
pyo3-asyncio = { version = "0.20.0", optional = true, features = ["tokio-runtime"] }
pythonize = { version = "0.20.0", optional = true }

jni = { version = "0.21.1", optional = true }

[profile.release]
strip = true
