[package]
name = "petpet-rs"
version = "0.0.1"
edition = "2021"

[target.aarch64-unknown-linux-gnu.package]
build = "build.rs"

[lib]
name = "petpet"
crate-type = ["cdylib"]

[features]
default = ["skia-safe/gl", "skia-safe/gpu", "server"]
server = ["axum"]
python = ["pyo3", "pythonize", "pyo3-asyncio"]
java = ["jni"]

[dependencies]
skia-safe = { version = "0.72.0", features = ["gl", "gpu", "textlayout"] }
reqwest = { version = "0.11.22", default-features = false, features = ["rustls", "default-tls"] }
url = "2.4.1"
futures = "0.3"
serde_json = "1.0.108"
serde = { version = "1.0.190", features = ["derive"] }
once_cell = "1.18.0"
tokio = { version = "1.33.0", features = ["full"] }
rand = "0.8.5"
meval = "0.2.0"
schnellru = "0.2.1"
gif = { version = "0.12.0" }
axum = { version = "0.6", optional = true, features = [] }
tracing-subscriber = "0.3.18"
rayon = "1.8.0"
paste = "1.0.14"
serde_path_to_error = "0.1.14"
color-art = "0.3.7"
regex = "1.10.2"
log = "0.4"

pyo3 = { version = "0.20.0", optional = true, features = ["extension-module"] }
pyo3-asyncio = { version = "0.20.0", optional = true, features = ["tokio-runtime"] }
pythonize = { version = "0.20.0", optional = true }

jni = { version = "0.21.1", optional = true }


#[target.aarch64-unknown-linux-gnu.dependencies]
#reqwest = { features = ["rustls", "native-tls"] }


# [target.'cfg(target_os = "linux")'.dependencies]
# openssl = { version = "0.10", features = ["vendored"] }

#[package.metadata.cross.build.env]
#passthrough = ["OPENSSL_DIR", "OPENSSL_LIB_DIR", "OPENSSL_INCLUDE_DIR"]

[profile.release]
strip = true

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:main"
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH libfontconfig1-dev:$CROSS_DEB_ARCH libfreetype6-dev:$CROSS_DEB_ARCH",
    "cp -r /usr/lib/aarch64-linux-gnu/* /usr/aarch64-linux-gnu/lib/"
]

